chess board added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,85 @@
     <title>Chess Board</title>
 </head>
 <body>
-    <div>
+    <div class="c0">
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+    </div>
+    <div class="c0">
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+    </div>
+    <div class="c0">
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+    </div>
+    <div class="c0">
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+    </div>
+    <div class="c0">
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+    </div>
+    <div class="c0">
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+    </div>
+    <div class="c0">
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+    </div>
+    <div class="c0">
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+        <div class="c1"></div>
     </div>
 </body>
 </html>
